Fixes #725, Aligning the Analytics box at sizes less than 1034 px
Responsive for all changes and changed protocol message

Made responsive with widths following market leader

--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -45,9 +45,11 @@ a {
 }
 
 .feed{
+  float: left;
   margin-left: 172px;
   width: 616px;
   display: inline-block;
+  margin-right: 36px;
 }
 
 .title-pointer:hover {
@@ -177,8 +179,7 @@ a {
 
 .infobox{
   display: inline-block;
-  float: right;
-  margin-right: 3.5%;
+  float: left;
 }
 
 .item img {
@@ -379,12 +380,7 @@ div.autocorrect{
     margin-left: 174px;
   }
 }
-@media screen and (max-width:1200px) {
-  .infobox{
-    margin-right: 1.3%;
-  }
 
-}
 @media screen and (max-width:1079px) {
   div.autocorrect{
     margin-left: 134px;
